Update OBRemittanceInformationTestDataFactory.java